# uppercase

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  tox.ini
src/src/: settings.py  urls.py
src/storage/: admin.py  entities.py  models.py  repositories.py  services.py  tools.py  urls.py  views.py
src/storage/migrations/: 0001_initial.py
src/storage/test/: test_views.py
